--- a/estilo.css
+++ b/estilo.css
@@ -40,6 +40,7 @@ ul,ol{
 .nav li a:hover{
 	background-color:#48D9D9;
 	
+
 }
 .nav > li{
 	float: left;
@@ -54,6 +55,11 @@ ul,ol{
 }
 .nav li:hover > ul{
 	display: block;
+	position: absolute;
+}
+.nav1 {
+	position:absolute;
+	z-index:40;
 }
 .nav1 li a {
 	background-color: black;
@@ -63,6 +69,7 @@ ul,ol{
 	text-decoration:none;
 	display: block;
 	right: 120%; 
+	
 }
 .nav1 li a:hover{
 	background-color:black;
@@ -164,4 +171,11 @@ body {
 	color: #555;
 	height: 15px;
 	float: right;
+}
+.sesion
+{
+	float:right;
+}
+.mapa{ float:left;
+z-index:0;
 }
